Fixed research page buttons on smaller devices

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -284,6 +284,7 @@
 .research-actions {
 	display: flex;
 	flex-direction: row;
+	flex-flow: wrap;
 }
 
 .research-action {
